--- a/BernieWrightson/BernieWrightson.html
+++ b/BernieWrightson/BernieWrightson.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-Bernie Wrightson<br>
 <img src="BernieWrightson.jpg">
-
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -27,20 +25,21 @@ Bernie Wrightson<br>
 <div class="mySlides" style="text-align: center;"><img src="BernieWrightsonArt05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BernieWrightsonArt06.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BernieWrightsonArt07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BernieWrightsonArt08.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Bernard Albert "Bernie" Wrightson (October 27, 1948 – March 18, 2017), sometimes credited as Berni Wrightson, was an American artist, known for co-creating <a href="https://blzimg.github.io/SwampThing/SwampThing.html">the Swamp Thing</a>, his adaptation of the novel <a href="../BerniWrightsonFrankenstein/BerniWrightsonFrankenstein.html">Frankenstein</a> illustration work, and for his other horror comics and illustrations (<a href="../BerniWrightsonMasterMacabre/BerniWrightsonMasterMacabre.html">Master of the Macabre</a>), which feature his trademark intricate pen and brushwork.
+Bernard Albert "Bernie" Wrightson (October 27, 1948 – March 18, 2017), sometimes credited as Berni Wrightson, was an American artist, known for co-creating <a href="../SwampThing/SwampThing.html">the Swamp Thing</a>, his adaptation of the novel <a href="../BerniWrightsonFrankenstein/BerniWrightsonFrankenstein.html">Frankenstein</a> illustration work, and for his other horror comics and illustrations (<a href="../BerniWrightsonMasterMacabre/BerniWrightsonMasterMacabre.html">Master of the Macabre</a>), which feature his trademark intricate pen and brushwork.
 </p><p>
-In 1968, he drew his first professional comic book story, "The Man Who Murdered Himself", which appeared in <a href="https://blzimg.github.io/HouseOfMystery/HouseOfMystery.html">House of Mystery</a> No. 179 (March–April 1969). He continued to work on a variety of mystery and anthology titles for both DC and, a few years later, its principal rival, Marvel Comics. It was for Marvel's <a href="../ChamberOfDarkness/ChamberOfDarkness.html">Chamber of Darkness</a> and <a href="https://blzimg.github.io/TowerOfShadows/TowerOfShadows.html">Tower of Shadows</a> titles where he was first encouraged to slightly simplify his intricate pen-and-ink drawing, and where his lush brushwork, a hallmark of his comics inking in the 1970s, was first evidenced.
+In 1968, he drew his first professional comic book story, "The Man Who Murdered Himself", which appeared in <a href="../HouseOfMystery/HouseOfMystery.html">House of Mystery</a> No. 179 (March–April 1969). He continued to work on a variety of mystery and anthology titles for both DC and, a few years later, its principal rival, Marvel Comics. It was for Marvel's <a href="../ChamberOfDarkness/ChamberOfDarkness.html">Chamber of Darkness</a> and <a href="../TowerOfShadows/TowerOfShadows.html">Tower of Shadows</a> titles where he was first encouraged to slightly simplify his intricate pen-and-ink drawing, and where his lush brushwork, a hallmark of his comics inking in the 1970s, was first evidenced.
 </p><p>
 Like many artists in the 1970s and 1980s, Wrightson moved to New York in hopes of finding work with comics publishers such as DC Comics or Marvel Comics. At one point Wrightson lived in the same Queens apartment building as artists Allen Milgrom, Howard Chaykin and Walter Simonson. Simonson recalls, "We'd get together at 3 a.m. They'd come up and we'd have popcorn and sit around and talk about whatever a 26, 27 and 20-year-old guys talk about. Our art, TV, you name it. I pretty much knew at the time, 'These are the good ole days.'"
 </p><p>
 The "Captain Sternn" segment of the animated film <a href="../HeavyMetal/HeavyMetal.html">Heavy Metal</a> is based on a character created by Wrightson (first appearing in the June 1980 issue of Heavy Metal magazine). The Freakshow graphic novel, written by Bruce Jones and illustrated (via pen, brush, and ink with watercolors) by Wrightson, was published in Spain in 1982 and serialized in Heavy Metal magazine in the early 1980s. See slideshow above for cover art.
 </p><p>
-In 1983 Bernie Wrightson illustrated the comic book adaptation of the Stephen King-penned horror film <a href="https://blzim.github.io/Creepshow/Creepshow.html">Creepshow</a>. This led to several other collaborations with King, including illustrations for the novella "Cycle of the Werewolf", the restored edition of King's apocalyptic horror epic, The Stand, and Wolves of the Calla, the fifth installment of King's Dark Tower series. He would later illustrate the cover for TV Guide magazine's April 26 – May 2, 1997 issue, illustrating the TV miniseries of King's The Shining.
+In 1983 Bernie Wrightson illustrated the comic book adaptation of the Stephen King-penned horror film <a href="../Creepshow/Creepshow.html">Creepshow</a>. This led to several other collaborations with King, including illustrations for the novella "Cycle of the Werewolf", the restored edition of King's apocalyptic horror epic, The Stand, and Wolves of the Calla, the fifth installment of King's Dark Tower series. He would later illustrate the cover for TV Guide magazine's April 26 – May 2, 1997 issue, illustrating the TV miniseries of King's The Shining.
 </p>
 </body>
 </html>
