--- a/HauntOfFear/HauntOfFear.html
+++ b/HauntOfFear/HauntOfFear.html
@@ -35,7 +35,7 @@
 <div class="mySlides" style="text-align: center;"><img src="HauntOfFear14.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HauntOfFear15.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HauntOfFear16.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HauntOfFear.17jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HauntOfFear17.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HauntOfFear18.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HauntOfFear19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HauntOfFear20.jpg"></div>
@@ -54,7 +54,11 @@
 </p><p>
 The Haunt of Fear was an American bi-monthly horror comic anthology series published by EC Comics in 1950. Along with Tales from the Crypt and The Vault of Horror, it formed a trifecta of popular EC horror anthologies. The Haunt of Fear was sold at newsstands beginning with its May/June 1950 issue. It ceased publication with its November/December 1954 issue, compiling a total of 28 issues.
 </p><p>
-Artist Graham Ingels took over the art duties of the Haunt of Fear starting with issue #4. He became the Old Witch's primary artist for the remainder of the comic's run, though his art had been appearing since the second issue. Ingels would take over the cover duty with issue #11, in February 1952. Other artists who contributed to the title were Feldstein, Johnny Craig, Wally Wood, Harvey Kurtzman, Jack Davis, George Roussos, Harry Harrison, Joe Orlando, Sid Check, George Evans, Reed Crandall, Jack Kamen and Bernard Krigstein. Ingels' artwork on the eight page lead stories, and his splash pages, particularly on issues #14 and 17, set a new standard for horror illustration. These have rarely if ever been equaled since.
+Artist "Ghastly" <a href="../GrahamIngles/GrahamIngles.html">Graham Ingels</a> took over the art duties of the Haunt of Fear starting with issue #4. He became the Old Witch's primary artist for the remainder of the comic's run, though his art had been appearing since the second issue. Ingels would take over the cover duty with issue #11, in February 1952. 
+</p><p>
+Other artists who contributed to the title were <a href="../AlFeldstein/AlFeldstein.html">Al Feldstein</a>, Johnny Craig, <a href="../WallyWood/WallyWood.html">Wally Wood</a>, <a href="../HarveyKurtzman/HarveyKurtzman.html">Harvey Kurtzman</a>, <a href="../JackDavis/JackDavis.html">Jack Davis</a>, George Roussos, Harry Harrison, Joe Orlando, Sid Check, George Evans, Reed Crandall, Jack Kamen and Bernard Krigstein. 
+</p><p>
+Ingels' artwork on the eight page lead stories, and his splash pages, particularly on issues #14 and 17, set a new standard for horror illustration. These have rarely if ever been equaled since.
 </p>
 </body>
 </html>
