--- a/TombOfDracula/TombOfDracula.html
+++ b/TombOfDracula/TombOfDracula.html
@@ -9,8 +9,7 @@
 
 <body>
 <img src="TombOfDracula1.jpg"> <br>
-Series: 70 issues 1972 - 1979<br>
-Publisher: Marvel<br>
+70 issues from 1972 - 1979 by Marvel
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -35,8 +34,9 @@ Publisher: Marvel<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-1st appearance of Dracula in a Marvel comic in "Dracula" Written by Gerry Conway. Art by Gene Colan. Cover by Neal Adams. 
-
+Written by Gerry Conway, illustrated by <a href="../GeneColan/GeneColan.html">Gene Colan</a> and covers by <a href="../NealAdams/NealAdams.html">Neal Adams</a> 
+</p><p>
+1st appearance of Dracula in a Marvel comic in "Dracula".<br>
 When Frank Drake finds himself drawn to a mysterious castle in the mountains of Transylvania, he accidentally reawakens an ancient curse and unleashes a powerful force for evil onto the world. Dracula, Lord of the Vampires, stalks the earth once more!
 </p>
 </body>
