--- a/index.html
+++ b/index.html
@@ -6522,6 +6522,13 @@
 </tr>
 
 <tr>
+<td>Gene Colan</td>
+<td>1926</td>
+<td>Creator</td>
+<td><a href="GeneColan/GeneColan.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gene Dogs</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -6827,6 +6834,13 @@
 <td>2009</td>
 <td>Jonathan Cape</td>
 <td><a href="Grandville/Grandville.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Graham Ingles</td>
+<td>1915</td>
+<td>Creator</td>
+<td><a href="GrahamIngles/GrahamIngles.html">Details</a></td>
 </tr>
 
 <tr>
