--- a/Metropol/Metropol.html
+++ b/Metropol/Metropol.html
@@ -9,7 +9,8 @@
 
 <body>
 <img src="Metropol1.jpg"> <br>
-12 issues 1991 by Epic (Marvel)
+12 issues 1991 by Epic (Marvel)<br>
+Created by <a href="../TedMcKEever/TedMcKeever.html">Ted McKeever</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
