--- a/PlasticForks/PlasticForks.html
+++ b/PlasticForks/PlasticForks.html
@@ -9,9 +9,8 @@
 
 <body>
 <img src="PlasticForks1.jpg" title="Plastic Forks"> <br>
-Series: 5 issues 1990<br>
-Written and Illustrated by Ted McKeever<br>
-Publisher: Epic (Marvel)<br>
+5 issues in 1990 by Epic (Marvel)<br>
+Written and Illustrated by <a href="../TedMcKeever/TedMcKeever.html">Ted McKeever</a>
 <p>
 What happens when a scientist discovers a way to make cloning easy? Nothing good as the inventor discovers when his invention is used on him. His quest to stop the conspiracy-minded thieves and retrieve his invention makes this one of the wildest suspense tales yet. 
 </p><p>
