--- a/index.html
+++ b/index.html
@@ -5440,6 +5440,13 @@
 </tr>
 
 <tr>
+<td>Eddy Current</td>
+<td>1987</td>
+<td>Mad Dog Graphics</td>
+<td><a href="EddyCurrent/EddyCurrent.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Eden's Trail</td>
 <td>2005</td>
 <td>Marvel</td>
@@ -14454,6 +14461,13 @@
 <td>1982</td>
 <td>Marvel</td>
 <td><a href="TeamAmerica/TeamAmerica.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ted McKeever</td>
+<td>1970?</td>
+<td>Creator</td>
+<td><a href="TedMcKeever/TedMcKeever.html">Details</a></td>
 </tr>
 
 <tr>
