--- a/index.html
+++ b/index.html
@@ -15984,6 +15984,13 @@
 </tr>
 
 <tr>
+<td>Wow</td>
+<td>1940</td>
+<td>Fawcett</td>
+<td><a href="Wow/Wow.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Writing For Comics</td>
 <td>2003</td>
 <td>Avatar</td>
