--- a/Goon/Goon.html
+++ b/Goon/Goon.html
@@ -2,17 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Goon</title>
 </head>
 
 <body>
-the Goon<br>
-<img src="Goon.jpg"> <br>
-Series: 15 issues, 2003<br>
-Publisher: Dark Horse<br>
+<img src="Goon1.jpg"> <br>
+15 issues from 2003 - 2016 by Dark Horse
 <p>
-he Goon is a comic book series written and drawn by Eric Powell (with colors often by Dave Stewart, Eric or Eric's brother, Robin). The series mixes both a comical and violent atmosphere with a supernatural slant, which pit the titular character against undead creatures/zombies, ghosts, ghouls, mutants, skunk-apes with an unnatural hunger for pies, giant squids, mob/gang leaders, extra-dimensional aliens, mad scientists and robots.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Goon1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Goon2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Goon3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Goon4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Goon5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Goon6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Goon7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Goon8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Goon9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Goon10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+The Goon is a comic book series written and drawn by <a href="../EricPowell/EricPowell.html">Eric Powell</a> (with colors often by Dave Stewart, Eric or Eric's brother, Robin). The series mixes both a comical and violent atmosphere with a supernatural slant, which pit the titular character against undead creatures/zombies, ghosts, ghouls, mutants, skunk-apes with an unnatural hunger for pies, giant squids, mob/gang leaders, extra-dimensional aliens, mad scientists and robots.
 </p><p>
 The Goon debuted in Avatar Illustrated, 1998, in a 1-page Preview, which is the true first cameo appearance of the character. Powell was unhappy with the quality of the Avatar Press comics after just 3 issues, so he stopped handing in new material and waited for his contract to expire. Once that happened, he was unable to find another publisher, so he moved into self-publishing in 2002 with Albatross Exploding Funny Books. 
 </p><p>
