--- a/index.html
+++ b/index.html
@@ -5658,12 +5658,18 @@
 </tr>
 
 <tr>
+<td>Eric Powell</td>
+<td>1975</td>
+<td>Creator</td>
+<td><a href="EricPowell/EricPowell.html">Details</a><td>
+</tr>
+
+<tr>
 <td>Ernst Fuchs</td>
 <td>1930</td>
 <td>Creator</td>
 <td><a href="ErnstFuchs/ErnstFuchs.html">Details</a><td>
 </tr>
-
 
 <tr>
 <td>Erte</td>
@@ -13327,6 +13333,13 @@
 <td>2014</td>
 <td>Vertigo</td>
 <td><a href="Silverfish/Silverfish.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Simon Hanselmann</td>
+<td>1990?</td>
+<td>Creator</td>
+<td><a href="SimonHanselmann/SimonHanselmann.html">Details</a></td>
 </tr>
 
 <tr>
