--- a/SimonHanselmann/SimonHanselmann.html
+++ b/SimonHanselmann/SimonHanselmann.html
@@ -32,6 +32,7 @@
 <div class="mySlides" style="text-align: center;"><img src="SimonHanselmann13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SimonHanselmann14.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SimonHanselmann15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SimonHanselmann16.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
