--- a/BasilWolverton/BasilWolverton.html
+++ b/BasilWolverton/BasilWolverton.html
@@ -24,6 +24,13 @@
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton03.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton12.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
