--- a/BasilWolverton/BasilWolverton.html
+++ b/BasilWolverton/BasilWolverton.html
@@ -31,6 +31,9 @@
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton15.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
