--- a/index.html
+++ b/index.html
@@ -4627,6 +4627,20 @@
 </tr>
 
 <tr>
+<td>David Finch</td>
+<td>1985?</td>
+<td>Creator</td>
+<td><a href="DavidFinch/DavidFinch.html">Details</a></td>
+</tr>
+
+<tr>
+<td>David Mack</td>
+<td>1970?</td>
+<td>Creator</td>
+<td><a href="DavidMack/DavidMack.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Day of the Defenders</td>
 <td>2001</td>
 <td>Marvel</td>
