--- a/index.html
+++ b/index.html
@@ -7661,6 +7661,13 @@
 </tr>
 
 <tr>
+<td>Howard Pyle</td>
+<td>1853</td>
+<td>Creator</td>
+<td><a href="HowardPyle/HowardPyle.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Howard the Duck</td>
 <td>1976</td>
 <td>Marvel</td>
