--- a/index.html
+++ b/index.html
@@ -8390,10 +8390,24 @@
 </tr>
 
 <tr>
+<td>Joe Jusko</td>
+<td>1959</td>
+<td>Creator</td>
+<td><a href="JoeJusko/JoeJusko.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Joe Maneely</td>
 <td>1926</td>
 <td>Creator</td>
 <td><a href="JoeManeely/JoeManeely.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Joe Orlando</td>
+<td>1927</td>
+<td>Creator</td>
+<td><a href="JoeOrlando/JoeOrlando.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14894,6 +14908,13 @@
 <td>1987</td>
 <td>Dark Horse</td>
 <td><a href="Trekker/Trekker.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Treasure Chest</td>
+<td>1946</td>
+<td>George A. Pflaum</td>
+<td><a href="TreasureChest/TreasureChest.html">Details</a></td>
 </tr>
 
 <tr>
