--- a/index.html
+++ b/index.html
@@ -12720,6 +12720,13 @@
 </tr>
 
 <tr>
+<td>Sabre</td>
+<td>1978</td>
+<td>Eclipse</td>
+<td><a href="Sabre/Sabre.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sabretooth</td>
 <td>1993</td>
 <td>Marvel</td>
