--- a/index.html
+++ b/index.html
@@ -1432,6 +1432,13 @@
 </tr>
 
 <tr>
+<td>Anant Pai</td>
+<td>1929</td>
+<td>Creator</td>
+<td><a href="AnantPai/AnantPai.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ancient Joe</td>
 <td>2001</td>
 <td>Dark Horse</td>
