--- a/index.html
+++ b/index.html
@@ -8418,6 +8418,13 @@
 </tr>
 
 <tr>
+<td>Joe Sacco</td>
+<td>1960</td>
+<td>Creator</td>
+<td><a href="JoeSacco/JoeSacco.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Joe Shuster</td>
 <td>1914</td>
 <td>Creator</td>
@@ -16162,6 +16169,13 @@
 <td>2002</td>
 <td>Vertigo</td>
 <td><a href="YTheLastMan/YTheLastMan.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Yahoo</td>
+<td>1988</td>
+<td>Fantagraphics</td>
+<td><a href="Yahoo/Yahoo.html">Details</a></td>
 </tr>
 
 <tr>
