--- a/index.html
+++ b/index.html
@@ -11659,6 +11659,13 @@
 </tr>
 
 <tr>
+<td>Palestine</td>
+<td>1993</td>
+<td>Fantagraphics</td>
+<td><a href="Palestine/Palestine.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Palookaville</td>
 <td>1991</td>
 <td>Drawn &amp; Quarterly</td>
