--- a/JoeSacco/JoeSacco.html
+++ b/JoeSacco/JoeSacco.html
@@ -30,12 +30,21 @@
 <div class="mySlides" style="text-align: center;"><img src="JoeSacco10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JoeSacco11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JoeSacco12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoeSacco13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoeSacco14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoeSacco15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoeSacco16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoeSacco17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoeSacco18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoeSacco19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoeSacco20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoeSacco21.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Joe Sacco (born October 2, 1960) is a Maltese-American cartoonist and journalist. He is best known for his comics journalism, in particular in the books Palestine (1996) and Footnotes in Gaza (2009), on Israeli–Palestinian relations; and Safe Area Goražde (2000) and The Fixer (2003) on the Bosnian War. 
+Joe Sacco (born October 2, 1960) is a Maltese-American cartoonist and journalist. He is best known for his comics journalism, in particular in the books <a href="../Palestine/Palestine.html">Palestine</a> (1996) and <a href="JoeSacco7.jpg">Footnotes in Gaza</a> (2009), on Israeli–Palestinian relations; and <a href="JoeSacco9.jpg">Safe Area Goražde</a> (2000) and <a href="JoeSacco10.jpg">The Fixer</a> (2003) on the Bosnian War. 
 </p><p>
 Sacco was born in Malta on October 2, 1960. His father Leonard was an engineer and his mother Carmen was a teacher. At the age of one, he moved with his family to Melbourne, Australia, where he spent his childhood until 1972, when they moved to Los Angeles. He began his journalism career working on the Sunset High School newspaper in Beaverton, Oregon. While journalism was his primary focus, this was also the period of time in which he developed his penchant for humor and satire. He graduated from Sunset High in 1978.
 </p><p>
@@ -44,22 +53,22 @@ Sacco earned his BA in journalism from the University of Oregon in 1981 in three
 In addition to his 1996 American Book Award, 2001 Guggenheim Fellowship, and 2001 Eisner Award, Sacco's Footnotes in Gaza was nominated for the 2009 Los Angeles Times Book Prize Graphic Novel award. Sacco was awarded the 2010 Ridenhour Book Prize for Footnotes in Gaza. He was awarded the 2012 Oregon Book Award for Footnotes in Gaza and 2014 Oregon Book Award Finalist for Journalism.
 </p><p>
 <li>1988–1992: <a href="../Yahoo/Yahoo.html">Yahoo</a> #1–6. Fantagraphics Books
-<li>1993–1995: Palestine #1–9. Fantagraphics Books
-<li>1994: Spotlight on the Genius that is Joe Sacco. Fantagraphics Books
-<li>1998: Stories From Bosnia #1: Soba. Drawn and Quarterly
-<li>1993: Palestine: A Nation Occupied. Fantagraphics Books (collects Palestine #1–5)
-<li>1996: Palestine: In the Gaza Strip. Fantagraphics Books (collects Palestine #4–9)
-<li>1997: War Junkie. Fantagraphics Books.
-<li>2000: Safe Area Goražde: The War in Eastern Bosnia 1992–1995. Fantagraphics Books (expanded edition 2010)
-<li>2001: Palestine. Fantagraphics Books (collects Palestine #1–9) (expanded edition in 2007)
-<li>2003: The Fixer: A Story from Sarajevo. Drawn and Quarterly Books
-<li>2003: Notes from a Defeatist. Fantagraphics Books. (collects Yahoo #1–6)
-<li>2005: War's End: Profiles from Bosnia 1995–96. Drawn and Quarterly
-<li>2006: But I Like It. Fantagraphics Books
-<li>2009: Footnotes in Gaza. Metropolitan Books
-<li>2012: Journalism. Metropolitan Books
-<li>2013: The Great War: July 1, 1916: The First Day of the Battle of the Somme. W. W. Norton & Company
-<li>2014: Bumf Vol. 1: I Buggered the Kaiser. Fantagraphics Books
+<li>1993–1995: <a href="../Palestine/Palestine.html">Palestine</a> #1–9. Fantagraphics Books
+<li>1994: <a href="JoeSacco5.jpg">Spotlight on the Genius that is Joe Sacco</a> Fantagraphics Books
+<li>1998: <a href="JoeSacco14.jpg">Stories From Bosnia #1: Soba</a> Drawn and Quarterly
+<li>1993: <a href="../Palestine/Palestine.html">Palestine: A Nation Occupied</a> Fantagraphics Books (collects Palestine #1–5)
+<li>1996: <a href="../Palestine/Palestine.html">Palestine: In the Gaza Strip</a> Fantagraphics Books (collects Palestine #4–9)
+<li>1997: <a href="JoeSacco15.jpg">War Junkie</a> Fantagraphics Books.
+<li>2000: <a href="JoeSacco9.jpg">Safe Area Goražde: The War in Eastern Bosnia</a> 1992–1995 Fantagraphics Books (expanded edition 2010)
+<li>2001: <a href="../Palestine/Palestine.html">Palestine</a> Fantagraphics Books (collects Palestine #1–9) (expanded edition in 2007)
+<li>2003: <a href="JoeSacco10.jpg">The Fixer: A Story from Sarajevo</a> Drawn and Quarterly Books
+<li>2003: <a href="JoeSacco16.jpg">Notes from a Defeatist</a> Fantagraphics Books. (collects Yahoo #1–6)
+<li>2005: <a href="JoeSacco18.jpg">War's End: Profiles from Bosnia</a> 1995–96 Drawn and Quarterly
+<li>2006: <a href="JoeSacco8.jpg">But I Like It</a> Fantagraphics Books
+<li>2009: <a href="JoeSacco7.jpg">Footnotes in Gaza</a> Metropolitan Books
+<li>2012: <a href="JoeSacco19.jpg">Journalism</a> Metropolitan Books
+<li>2013: <a href="JoeSacco20.jpg">The Great War: July 1, 1916: The First Day of the Battle of the Somme</a> W. W. Norton & Company
+<li>2014: <a href="JoeSacco21.jpg">Bumf Vol. 1: I Buggered the Kaiser</a> Fantagraphics Books
 </p>
 </body>
 </html>
