--- a/index.html
+++ b/index.html
@@ -4991,6 +4991,13 @@
 </tr>
 
 <tr>
+<td>Dilbert</td>
+<td>1989</td>
+<td>United Feature Syndicate</td>
+<td><a href="Dilbert/Dilbert.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dino-Riders</td>
 <td>1989</td>
 <td>Marvel</td>
