--- a/Dilbert/Dilbert.html
+++ b/Dilbert/Dilbert.html
@@ -36,15 +36,23 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Dilbert is an American comic strip written and illustrated by Scott Adams, first published on April 16, 1989. The strip is known for its satirical office humor about a white-collar, micromanaged office featuring engineer Dilbert as the title character. The strip has spawned dozens of books, an animated television series, a video game, and hundreds of Dilbert-themed merchandise items. Dilbert Future and The Joy of Work are among the most read books in the series. Adams received the National Cartoonists Society Reuben Award in 1997 and the Newspaper Comic Strip Award in the same year for his work on the strip. Dilbert appears online and in 2,000 newspapers worldwide in 65 countries and 25 languages. Scott Adams, the creator of the comic strip Dilbert, has an estimated net worth of $75 million. Dilbert.com is worth $2,135,200 in 2019.
+Dilbert is an American comic strip written and illustrated by Scott Adams, first published on April 16, 1989. The strip is known for its satirical office humor about a white-collar, micromanaged office featuring engineer Dilbert as the title character. 
+</p><p>
+The strip has spawned dozens of books, an animated television series, a video game, and hundreds of Dilbert-themed merchandise items. Dilbert Future and The Joy of Work are among the most read books in the series. Adams received the National Cartoonists Society Reuben Award in 1997 and the Newspaper Comic Strip Award in the same year for his work on the strip. Dilbert appears online and in 2,000 newspapers worldwide in 65 countries and 25 languages. Scott Adams, the creator of the comic strip Dilbert, has an estimated net worth of $75 million. Dilbert.com is worth $2,135,200 in 2019.
 </p><p>
 On June 3, 2010, United Media sold their licensing arm, along with the rights to Dilbert, to Iconix Brand Group. This led to Dilbert leaving United Media: in late December 2010, it was announced that Dilbert would move to Universal Uclick (a division of Andrews McMeel Universal) beginning in June 2011. Dilbert has been with Universal Uclick — now known as Andrews McMeel Syndication — ever since. 
+</p><p>
+Scott Adams worked at Pacific Bell between 1986 and June 1995 and the personalities he encountered there became the inspiration for many of his Dilbert characters. Adams first published Dilbert with United Media in 1989, while still employed at Pacific Bell. He had to draw his cartoons at 4 a.m. in order to work a full day at the company. 
+</p><p>
+His first paycheck for Dilbert was a monthly royalty check of $368.62. Gradually, Dilbert became more popular and was published by 100 newspapers in 1991, and 400 by 1994. Adams attributes his success to his idea of including his e-mail address in the panels, thus facilitating feedback from readers. Adams's success grew, and he became a full-time cartoonist with Dilbert in 800 newspapers. In 1996, The Dilbert Principle was released, his first business book.
 </p><p>
 The comic strip originally revolved around Dilbert and his "pet" dog Dogbert in their home. Many early plots revolved around Dilbert's engineer nature or his bizarre inventions. Also prominent were plots based on Dogbert's megalomaniacal ambitions. Later, the location of most of the action moved to Dilbert's workplace and the strip started to satirize technology, workplace, and company issues. The comic strip's popular success is attributable to its workplace setting and themes, which are familiar to a large and appreciative audience; Adams has said that switching the setting from Dilbert's home to his office was "when the strip really started to take off". The workplace location is Silicon Valley.
 </p><p>
 Dilbert portrays corporate culture as a Kafkaesque world of bureaucracy for its own sake and office politics that stand in the way of productivity, where employees' skills and efforts are not rewarded, and busy work is praised. Much of the humor emerges as the audience sees the characters making obviously ridiculous decisions that are natural reactions to mismanagement. 
 </p><p>
-Dilbert was adapted into a UPN animated television series starring Daniel Stern as Dilbert, Chris Elliott as Dogbert, and Kathy Griffin as Alice. The series ran for two seasons from January 25, 1999 to July 25, 2000. The first season centered around the creation of a new product called the "Gruntmaster 6000". It was critically acclaimed and won a Golden Globe award, leading to its renewal for a second season. The second season did away with the serial format and was composed entirely of standalone episodes, many of which shifted focus away from the workplace and involved absurdist plots such as Wally being mistaken for a religious leader ("The Shroud of Wally") and Dilbert being accused of mass murder ("The Trial"). Critical and fan reception was resoundingly negative to the change in format and storytelling, and the series was not renewed for a third season. The second season two-episode finale included Dilbert getting pregnant with the child of a cow, a hillbilly, robot DNA, "several dozen engineers", an elderly billionaire, and an alien, eventually ending up in a custody battle with Stone Cold Steve Austin as the Judge.
+Dilbert was adapted into a UPN animated television series starring Daniel Stern as Dilbert, Chris Elliott as Dogbert, and Kathy Griffin as Alice. The series ran for two seasons from January 25, 1999 to July 25, 2000. The first season centered around the creation of a new product called the "Gruntmaster 6000". It was critically acclaimed and won a Golden Globe award, leading to its renewal for a second season. 
+</p><p>
+The second season did away with the serial format and was composed entirely of standalone episodes, many of which shifted focus away from the workplace and involved absurdist plots such as Wally being mistaken for a religious leader ("The Shroud of Wally") and Dilbert being accused of mass murder ("The Trial"). Critical and fan reception was resoundingly negative to the change in format and storytelling, and the series was not renewed for a third season. The second season two-episode finale included Dilbert getting pregnant with the child of a cow, a hillbilly, robot DNA, "several dozen engineers", an elderly billionaire, and an alien, eventually ending up in a custody battle with Stone Cold Steve Austin as the Judge.
 </p><p>
 Comic Strip Collections:
 </p><p>
@@ -52,9 +60,9 @@ Comic Strip Collections:
 <li>Shave the Whales 1994
 <li>Bring Me the Head of Willy the Mailboy! 1995
 <li>It's Obvious You Won't Survive by Your Wits Alone 1995
-<li>Still Pumped from Using the Mouse 1996  	
+<li>Still Pumped from Using the Mouse 1996 
 <li>Fugitive From the Cubicle Police 1996 
-<li>Casual Day Has Gone Too Far 1997 	
+<li>Casual Day Has Gone Too Far 1997 
 <li>I'm Not Anti-Business, I'm Anti-Idiot 1998 
 <li>Journey to Cubeville 1998 
 <li>Don't Step in the Leadership 1999 
@@ -68,11 +76,11 @@ Comic Strip Collections:
 <li>The Fluorescent Light Glistens Off Your Head 2005 
 <li>Thriving on Vague Objectives 2005 
 <li>Try Rebooting Yourself 2006 
-<li>Positive Attitude 2007 	 	
+<li>Positive Attitude 2007 
 <li>This is the Part Where You Pretend to Add Value 2008 
 <li>Freedom's Just Another Word for People Finding Out You're Useless 2009 
-<li>14 Years of Loyal Service in a Fabric-Covered Box 2009 	
-<li>I'm Tempted to Stop Acting Randomly 2010 	
+<li>14 Years of Loyal Service in a Fabric-Covered Box 2009 
+<li>I'm Tempted to Stop Acting Randomly 2010 
 <li>How's That Underling Thing Working Out for You? 2011 
 <li>Teamwork Means You Can't Pick the Side that's Right 2012 
 <li>Your New Job Title Is "Accomplice" 2013 
