--- a/index.html
+++ b/index.html
@@ -12951,6 +12951,13 @@
 </tr>
 
 <tr>
+<td>Scott Adams</td>
+<td>1957</td>
+<td>Creator</td>
+<td><a href="Dilbert/Dilbert.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Scott McCloud</td>
 <td>1960</td>
 <td>Creator</td>
