--- a/Monstress/Monstress.html
+++ b/Monstress/Monstress.html
@@ -41,7 +41,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Monstress is an epic fantasy comics series written by Marjorie Liu and drawn by Sana Takeda, published since 2015 by the American publisher Image Comics.
+Monstress is an epic fantasy comics series written by <a href="../MarjorieLiu/MarjorieLiu.html">Marjorie Liu</a> and drawn by <a href="../SanaTakeda/SanaTakeda.html">Sana Takeda</a>, published since 2015 by the American publisher Image Comics.
 </p><p>
 The comic was described by the Los Angeles Review of Books as "ambitious as George R. R. Martin or J. R. R. Tolkien" for its high fantasy concepts and heavy world-building. The series has earned many awards, including five Eisner Awards and four Hugo Awards.
 </p><p>
