--- a/index.html
+++ b/index.html
@@ -4648,6 +4648,13 @@
 </tr>
 
 <tr>
+<td>David Mazzucchelli</td>
+<td>1960</td>
+<td>Creator</td>
+<td><a href="DavidMazzucchelli/DavidMazzucchelli.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Day of the Defenders</td>
 <td>2001</td>
 <td>Marvel</td>
