--- a/index.html
+++ b/index.html
@@ -5272,6 +5272,20 @@
 </tr>
 
 <tr>
+<td>Doug Mahnke</td>
+<td>1970?</td>
+<td>Creator</td>
+<td><a href="DougMahnke/DougMahnke.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Doug Wildey</td>
+<td>1922</td>
+<td>Creator</td>
+<td><a href="DougWildey/DougWildey.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dr. Doom and the Masters of Evil</td>
 <td>2009</td>
 <td>Marvel</td>
@@ -5412,6 +5426,13 @@
 </tr>
 
 <tr>
+<td>Dustin Nguyen</td>
+<td>1976</td>
+<td>Creator</td>
+<td><a href="DustinNguyen/DustinNguyen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dynamite Entertainment</td>
 <td>2005</td>
 <td>Publisher</td>
@@ -5419,7 +5440,14 @@
 </tr>
 
 <tr>
-<td><a name ="e">Earth X</td>
+<td><a name ="e">Earl Norem</td>
+<td>1923</td>
+<td>Creator</td>
+<td><a href="EarlNorem/EarlNorem.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Earth X</td>
 <td>1999</td>
 <td>Marvel</td>
 <td><a href="EarthX/EarthX.html">Details</a></td>
@@ -5458,6 +5486,13 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="Ectokid/Ectokid.html">Details</a> </td>
+</tr>
+
+<tr>
+<td>Ed McGuinness</td>
+<td>1990?</td>
+<td>Creator</td>
+<td><a href="EdMcGuinness/EdMcGuinness.html">Details</a></td>
 </tr>
 
 <tr>
