--- a/KelleyJones/KelleyJones.html
+++ b/KelleyJones/KelleyJones.html
@@ -31,7 +31,7 @@
 Born July 23, 1962 in Sacramento, California is an American comics artist, winner of the 2014 Ink Pot Award. Best known for his work on Batman with writer Doug Moench and on The Sandman with writer Neil Gaiman.
 </p><p>
 Titles:<br>
-13th Son (2007 Dark Horse)<br>
+<a href="../13thSon/13thSon.html">13th Son</a> (2007 Dark Horse)<br>
 Aliens: Hive #1–4 (1992 Dark Horse)<br>
 Conan: The Book of Thoth #1–4 (2006 Dark Horse)<br>
 Hammer #1–4 (1997–1998 Dark Horse)<br>
