--- a/index.html
+++ b/index.html
@@ -8466,6 +8466,13 @@
 </tr>
 
 <tr>
+<td>Joe Kubert</td>
+<td>1926</td>
+<td>Creator</td>
+<td><a href="JoeKubert/JoeKubert.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Joe Maneely</td>
 <td>1926</td>
 <td>Creator</td>
