--- a/index.html
+++ b/index.html
@@ -5195,6 +5195,13 @@
 </tr>
 
 <tr>
+<td>Don Martin</td>
+<td>1931</td>
+<td>Creator</td>
+<td><a href="DonMartin/DonMartin.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Donald Duck</td>
 <td>1932</td>
 <td>Disney</td>
@@ -14893,6 +14900,13 @@
 <td>1936</td>
 <td>United Feature</td>
 <td><a href="TipTop/TipTop.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Todd McFarlane</td>
+<td>1961</td>
+<td>Creator</td>
+<td><a href="ToddMcFarlane/ToddMcFarlane.html">Details</a></td>
 </tr>
 
 <tr>
