--- a/index.html
+++ b/index.html
@@ -16185,6 +16185,13 @@
 </tr>
 
 <tr>
+<td>W.W. Denslow</td>
+<td>1856</td>
+<td>Creator</td>
+<td><a href="WWDenslow/WWDenslow.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wyatt Earp</td>
 <td>1955</td>
 <td>Marvel</td>
