--- a/ArthurRackham/ArthurRackham.html
+++ b/ArthurRackham/ArthurRackham.html
@@ -25,6 +25,9 @@ Arthur Rackham<br>
 <div class="mySlides" style="text-align: center;"><img src="ArthurRackham4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ArthurRackham5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ArthurRackham6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArthurRackham7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArthurRackham8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArthurRackham9.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
