--- a/index.html
+++ b/index.html
@@ -5804,6 +5804,13 @@
 </tr>
 
 <tr>
+<td>Eternaut</td>
+<td>1957</td>
+<td>Creator</td>
+<td><a href="Eternaut/Eternaut.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ethan Van Sciver</td>
 <td>1974</td>
 <td>Creator</td>
