--- a/index.html
+++ b/index.html
@@ -3829,6 +3829,13 @@
 </tr>
 
 <tr>
+<td>Comics Review Presents</td>
+<td>1993</td>
+<td>Manuscript Press</td>
+<td><a href="ComicsReview/ComicsReview.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comix Book</td>
 <td>1974</td>
 <td>Curtis</td>
@@ -6131,6 +6138,13 @@
 <td>2011</td>
 <td>Marvel</td>
 <td><a href="FF/FF.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fiction House</td>
+<td>1921</td>
+<td>Publisher</td>
+<td><a href="FictionHouse/FictionHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8596,6 +8610,14 @@
 <td>1945</td>
 <td>Spotlight</td>
 <td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
+</tr>
+
+
+<tr>
+<td>Joseph Doolin</td>
+<td>1896</td>
+<td>Creator</td>
+<td><a href="JosephDoolin/JosephDoolin.html">Details</a></td>
 </tr>
 
 <tr>
