--- a/FictionHouse/FictionHouse.html
+++ b/FictionHouse/FictionHouse.html
@@ -22,20 +22,26 @@
 <div class="mySlides" style="text-align: center;"><img src="FictionHouse2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FictionHouse3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FictionHouse4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse12.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Fiction House was an American publisher of pulp magazines and comic books that existed from the 1920s to the 1950s. It was founded by John B. "Jack" Kelly and John W. Glenister. By the late 1930s, the publisher was Thurman T. Scott. Its comics division was best known for its pinup-style good girl art, as epitomized by the company's most popular character, <a href="../Sheena/Sheena.html">Sheena, Queen of the Jungle</a>. 
+Fiction House was an American publisher of pulp magazines and comic books that existed from the 1920s to the 1950s. It was founded by John B. "Jack" Kelly and John W. Glenister. By the late 1930s, the publisher was Thurman T. Scott. Its comics division was best known for its pinup-style good girl art, as epitomized by the company's most popular character, Sheena, Queen of the Jungle. 
 </p><p>
-By the late 1930s, publisher Thurman T. Scott expanded Fiction House into comic books, an emerging medium that began to seem a viable adjunct to the fading pulps. Receptive to a sales call by Eisner & Iger, one of the prominent "packagers" of that time which produced complete comic books on demand for publishers looking to enter the field, Scott published <a href="../JumboComics/JumboComics.html">Jumbo Comics</a> #1 (Sept. 1938) under the company's Real Adventures Publishing Company imprint.
+By the late 1930s, publisher Thurman T. Scott expanded Fiction House into comic books, an emerging medium that began to seem a viable adjunct to the fading pulps. Receptive to a sales call by Eisner & Iger, one of the prominent "packagers" of that time which produced complete comic books on demand for publishers looking to enter the field, Scott published Jumbo Comics #1 (Sept. 1938) under the company's Real Adventures Publishing Company imprint.
 </p><p>
 Sheena, Queen of the Jungle appeared in that initial issue, soon becoming the company's star character. Sheena appeared in every issue of Jumbo Comics (Sept. 1938 – April 1953), as well as in her 18-issue spin-off, Sheena, Queen of the Jungle (Spring 1942 – Winter 1952), the first comic book to title-star a female character.
 </p><p>
 Other features in Jumbo Comics #1 included three by future industry legend <a href="../JackKirby/JackKirby.html">Jack Kirby</a>, representing his first comic-book work following his debut in Wild Boy Magazine: the science fiction feature The Diary of Dr. Hayward (under the pseudonym "Curt Davis"), the modern-West crimefighter strip Wilton of the West (as "Fred Sande"), and Part One of the swashbuckling serialization of Alexandre Dumas, père's The Count of Monte Cristo (as "Jack Curtiss"), each four pages long.
-</p><p>
-"The Big Six"
 </p><p>
 <li>Fight Comics (86 issues, Jan. 1940–Jan. 1954)
 <li><a href="../JumboComics/JumboComics.html">Jumbo Comics</a>
@@ -43,7 +49,6 @@ Other features in Jumbo Comics #1 included three by future industry legend <a hr
 <li><a href="../PlanetComics/PlanetComics.html">Planet Comics</a>
 <li>Rangers of Freedom Comics / Rangers Comics (69 issues, October 1941–Winter 1953)
 <li>Wings Comics (124 issues, Sept. 1940–1954)
-</p><p>
 <li><a href="../Sheena/Sheena.html">Sheena, Queen of the Jungle</a>
 <li><a href="../CowgirlRomances/CowgirlRomances.html">Cowgirl Romances</a>
 <li><a href="../GhostComics/GhostComics.html">Ghost Comics</a>
