--- a/index.html
+++ b/index.html
@@ -10910,6 +10910,13 @@
 </tr>
 
 <tr>
+<td>Murphy Anderson</td>
+<td>1926</td>
+<td>Creator</td>
+<td><a href="MurphyAnderson/MurphyAnderson.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mutant Misadventures of Cloak And Dagger</td>
 <td>1983</td>
 <td>Marvel</td>
