--- a/index.html
+++ b/index.html
@@ -3829,6 +3829,13 @@
 </tr>
 
 <tr>
+<td>Comics Journal</td>
+<td>1977</td>
+<td>Fantagraphics</td>
+<td><a href="ComicsJournal/ComicsJournal.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comics Review Presents</td>
 <td>1993</td>
 <td>Manuscript Press</td>
@@ -16099,6 +16106,13 @@
 <td>1966</td>
 <td>Wallace Wood</td>
 <td><a href="Witzend/Witzend.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wizard Magazine</td>
+<td>1991</td>
+<td>Wizard</td>
+<td><a href="WizardMagazine/WizardMagazine.html">Details</a></td>
 </tr>
 
 <tr>
